test/good/dictionaries/for01.px

for a, b in {'x': 5.5} do
    print b, a
