test/bad/loops/for04.px

for i in 'a'.."a" do
    skip
